--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My Web Page</h1>
-    <p>This is a simple HTML document.</p>
+    <p style="color: aqua;">This is a simple HTML document.</p>
     <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
 </body>
